# bibliochouette

./: .env  .gitignore  Makefile  README.md  manage.py  requirements.txt
backend/: pyproject.toml
backend/bibliochouette/: asgi.py  urls.py
backend/bibliochouette/environments/: env.local
backend/bibliochouette/settings/: __init__.py  base.py  local.py
backend/core/: mixins.py
backend/holders/: models.py  urls.py  views.py
backend/holders/migrations/: 0001_initial.py  0002_initial.py
backend/libraries/: admin.py  models.py  views.py
backend/libraries/migrations/: 0001_initial.py  0002_remove_book_owner_book_created_by_and_more.py  0003_alter_book_table_alter_bookgenre_table_and_more.py  0006_alter_loan_expected_return_date.py
backend/users/: admin.py  models.py  views.py
backend/users/migrations/: 0002_alter_user_table.py
bibliochouette/: urls.py  wsgi.py
bibliochouette/settings/: __init__.py  base.py  local.py
core/: middlewares.py  mixins.py  models.py
docker/: docker-compose.yml
docker/dev/: Dockerfile  backend.Dockerfile  frontend.Dockerfile
frontend/: package.json
frontend/src/: App.js  firebase.js
holders/: admin.py  models.py  serializers.py  urls.py  views.py
holders/migrations/: 0001_initial.py  0002_initial.py  0003_remove_holdergroup_admin_holder_created_by_and_more.py  0004_alter_holder_table_alter_holdergroup_table.py
libraries/: models.py  serializers.py  urls.py  views.py
libraries/migrations/: 0001_initial.py  (+2 more)
templates/emails/: user_reset_password.txt
users/: models.py  permissions.py  serializers.py  urls.py
(+29 files in other folders)
